Revision History
=================

-------------------------------------------------------------------------------
dcm4che 1.0.4 -  - Changes since dcm4che 1.0.3
-------------------------------------------------------------------------------
BUG FIXES:

ENHANCEMENTS:
org.dcm4che.net.Association:
+ add properties rqTimeout, acTimeout, dimseTimeout
org.dcm4che.server.DcmHandler:
+ add properties rqTimeout, dimseTimeout, soCloseDelay
DcmSnd, MppsSnd:
+ add options --ac-timeout, --dimse-timeout, --so-close-delay
DcmRcv:
+ add options --max-clients, --rq-timeout, --dimse-timeout, --so-close-delay

CHANGES:
org.dcm4che.data.Dataset:
+ log warning and ignore attributes with tag < (0004,0000), instead
  throw new IllegalArgumentException
org.dcm4che.net.Association:
+ rename property TCPCloseTimeout to soCloseDelay
+ remove timeout param from connect(), accept(), read()
org.dcm4che.srom.RelationConstraints:
+ allow not only TextConent, but also CodeContent and NumContent
  as source of hasProperties and inferredFrom relationship (DICOM CP-266)
+ move "BUILD" info file from root into doc directory to avoid conflict
  with "build" directory on Windows platform.
 
-------------------------------------------------------------------------------
dcm4che 1.0.3 -  - Changes since dcm4che 1.0.2
-------------------------------------------------------------------------------
BUG FIXES:
org.dcm4cheri.data
+ Fix DcmStreamHandlerImpl#fragment (=> error writing encapsed pixel data)
+ Fix value of Command#C_CANCEL_RQ
+ Fix DcmElement#addItem for SQ Elements (UnsupportedOperationException)
org.dcm4cheri.srom
+ Fix KeyObjectImpl#sopInstanceRefListToSQ (ClassCastException srom->Dataset)
+ Fix RefSOPImpl#toDataset (SOPInstanceUID <-> SOPClassUID)
samples:
+ Fix build.xml to include missing .class into imgread.jar & imgdisp.jar
+ DcmRcv: Fix write to file - wasn't MT safe

ENHANCEMENTS:
dcm4che API:
+ add org.dcm4che.data.DcmObject#getDateRange