@@ -5,6 +5,9 @@ Revision History
 dcm4che 1.0.4 -  - Changes since dcm4che 1.0.3
 -------------------------------------------------------------------------------
 BUG FIXES:
++ org.dcm4che.srom.SRDocumentFactory#newSRDocument(Dataset):
+  Fix NullPointerException for Datasets without
+  Content Template Sequence (0040,A504)
 
 ENHANCEMENTS:
 org.dcm4che.net.Association:
